# banco-python

./: Readme.md  decorator_functools.py  format_and_check.sh  gerador.py  interador.py  pyproject.toml  run.py  salvar_arquivo_binario.py  script.sh
10_atributos_de_classes_ou_instancias/: 10_abstract_class.py  10_atributos_de_classes_ou_instancias.py  10_metodo_statico.py
5_manipulacao_de_arquivos/boas_praticas/: arquivo_utf8.txt  boas_praticas.py
5_manipulacao_de_arquivos/operacao_escrita/: logs.txt
5_manipulacao_de_arquivos/operacao_leitura/: lorem.txt
5_manipulacao_de_arquivos/os_shutil/: os_shutil.py
5_manipulacao_de_arquivos/os_shutil/novo-diretorio/: aran.txt
5_manipulacao_de_arquivos/tratamento_erros/: tratamento_erros.py
5_manipulacao_de_arquivos/tratamento_erros/csv/: run.py  usuarios.csv
6_POO/: construtor_descruscontor.py  primeiro_projeto.py
7_heranca/: 7_1_heranca_multipla.py  7_heranca.py  teste.drawio
8_encapsulamento/: 8_encapsulamento.py  8_encapsulamento_propriedades.py  propriedades_pessoa.py
9_polimorfismo/: 9_polimorfismo.py
desafios/decorador_log/: run.py
desafios/desafio_v1/: dados_banco.pkl  desafio_v1.py  log.txt  log_usuarios.txt
desafios/desafio_v2/: desafio_v2.py  log_usuarios.txt
desafios/gerador_relatorios/: run.py
desafios/iterador_personalizado/: run.py
manipulacao_de_arquivos/operacao_leitura/: operacao_leitura.py
operacao_escrita/: operacao_escrita.py
