[tool.poetry]
name = "banco-python"
version = "0.1.0"
description = "Projeto de POO Bancário"
authors = ["paulocarlosfilho <paulocarlosfilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12" # Ajuste para sua versão se for diferente (ex: ^3.10)
sqlalchemy = "*" 
psycopg2-binary = "*" 

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
